# telegram_forward

./: .gitignore  LICENSE  README.md  pyproject.toml
telegram_forward/: __init__.py  forward.py
